# OpenCrystalCaves

./: .gitignore  .gitmodules  README.md
.github/workflows/: cpp.yml  cpp.yml.cmake
occ/: CMakeLists.txt
occ/char_viewer/: CMakeLists.txt
occ/font_viewer/: CMakeLists.txt
occ/game/: CMakeLists.txt
occ/game/export/: actor.h  constants.h  enemy.h  exit.h  game.h  hazard.h  item.h  object.h  particle.h  player.h  player_input.h  player_state.h
occ/game/src/: actor.cc  enemy.cc  exit.cc  game_impl.cc  game_impl.h  hazard.cc  item.cc  level.cc  level.h  level_loader.cc  level_loader.h  missile.cc  missile.h  moving_platform.cc  moving_platform.h  particle.cc  particle.h  player.cc  player_state.cc
occ/image_viewer/: CMakeLists.txt
occ/level_viewer/: CMakeLists.txt  level_viewer.cc
occ/occ/: CMakeLists.txt
occ/occ/src/: game_renderer.cc  game_renderer.h  imagemgr.cc  occ.cc  panel.cc  panel.h  player_state.h  soundmgr.cc  soundmgr.h  spritemgr.cc  spritemgr.h  state.cc  state.h  utils.cc  utils.h  wchars.h
occ/panel_test/: panel_test.cc
occ/sdl_wrapper/: CMakeLists.txt
occ/sdl_wrapper/export/: event.h  graphics.h
occ/sdl_wrapper/src/: event_impl.cc  graphics_impl.cc  graphics_impl.h  sdl_wrapper_impl.cc  sdl_wrapper_impl.h
occ/sound_player/: CMakeLists.txt  sound_player.cc
occ/sprite_to_emoji/: CMakeLists.txt  sprite_to_emoji.cc
occ/sprite_viewer/: CMakeLists.txt  sprite_viewer.cc
occ/utils/: CMakeLists.txt
occ/utils/export/: geometry.h  misc.h  sound.h  sprite.h  vector.h
occ/utils/src/: exe_data.cc  geometry.cc
